crates/next-custom-transforms/tests/errors/server-actions/server-graph/21/input.js
'use cache'
'use server'

export async function fn() {}
